# axum-graphql

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_post_table.rs
src/: handlers.rs  main.rs  schema.rs
src/entities/: mod.rs  post.rs  prelude.rs  user.rs
src/schema/: post.rs  user.rs
src/schema/post/: loader.rs  model.rs  object.rs  resolver.rs
src/schema/user/: model.rs  object.rs  resolver.rs
